--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Booking</title>
-    <link rel="stylesheet" href="review.css">
+    <link rel="stylesheet" href="blog.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -44,53 +44,96 @@
                 <button class="get-btn">Get in Touch</button>
             </nav>
             <div class="hero-head">
-                <h1>Customer Reviews</h1>
+                <h1>Blog</h1>
             </div>
         </header>
         <main>
-            <section class="fade-in" id="review">
-                <div class="first-review">
-                    <img src="./review/Review-image.svg" alt="">
-                    <div class="rev-text">
-                        <h2>“We specialize in transforming visions
-                            into reality. Explore our portfolio of
-                            innovative architectural and interior
-                            design projects crafted with
-                            precision.”
-                        </h2>
-                        <div class="flex-rev">
-                            <h3>William Elijah Jr.</h3>
-                            <p>Managing Director</p>
-                        </div>
-                    </div>
+            <section class="fade-in" id="grid-blog">
+                <div class="item">
+                    <img src="./blog/Blog-image.svg" alt="">
+                    <a href="#">12 Jan, 2024</a>
+                    <h2>Exploring the World of Interior
+                        Inspiration
+                    </h2>
+                    <p>From minimalist chic to bohemian flair, we'll delve
+                        into a myriad of design styles
+                    </p>
                 </div>
-                <div class="second-review">
-                    <img src="./review/Review-image2.svg" alt="">
-                    <div class="rev-text">
-                        <h2>“Thanks to Nextspace, my home has
-                            been transformed into a sanctuary
-                            that reflects my personality and
-                            lifestyle.”
-                        </h2>
-                        <div class="flex-rev">
-                            <h3>Lucas Benjamin</h3>
-                            <p>Managing Director</p>
-                        </div>
-                    </div>
+                <div class="item">
+                    <img src="./blog/Blog-image2.svg" alt="">
+                    <a href="#">12 Jan, 2024</a>
+                    <h2>The Journey to Beautiful
+                        Interiors
+                    </h2>
+                    <p>From modern elegance to rustic charm, we
+                        explore a variety of design styles.
+                    </p>
                 </div>
-                <div class="first-review">
-                    <img src="./review/Review-image3.svg" alt="">
-                    <div class="rev-text">
-                        <h2>“I had the pleasure of working with
-                            Nextspace on a complete renovation
-                            of my home, and I couldn't be happier
-                            with the results.”
-                        </h2>
-                        <div class="flex-rev">
-                            <h3>Sania Tama Mirja</h3>
-                            <p>Managing Director</p>
-                        </div>
-                    </div>
+                <div class="item">
+                    <img src="./blog/Blog-image3.svg" alt="">
+                    <a href="#">12 Jan, 2024</a>
+                    <h2>Exploring Trends and Techniques
+                        in Interior Design
+                    </h2>
+                    <p>From futuristic sleek to retro chic, we uncover a
+                        spectrum of design styles.
+                    </p>
+                </div>
+                <div class="item">
+                    <img src="./blog/Blog-image4.svg" alt="">
+                    <a href="#">12 Jan, 2024</a>
+                    <h2>Unlocking the Secrets of Stylish
+                        Spaces
+                    </h2>
+                    <p>From urban minimalism to traditional grandeur, we
+                        examine multiple design styles.
+                    </p>
+                </div>
+                <div class="item">
+                    <img src="./blog/Blog-image5.svg" alt="">
+                    <a href="#">12 Jan, 2024</a>
+                    <h2>Crafting Your Perfect Home
+                        Oasis
+                    </h2>
+                    <p>From luxurious glam to earthy tones, we delve into
+                        an array of design styles.
+                    </p>
+                </div>
+                <div class="item">
+                    <img src="./blog/Blog-image6.svg" alt="">
+                    <a href="#">12 Jan, 2024</a>
+                    <h2>Chronicles of Interior Excellence</h2>
+                    <p>From coastal serenity to urban cool, we
+                        investigate a range of design styles.
+                    </p>
+                </div>
+                <div class="item">
+                    <img src="./blog/Blog-image7.svg" alt="">
+                    <a href="#">12 Jan, 2024</a>
+                    <h2>Transforming Spaces into Dream
+                        Dwellings
+                    </h2>
+                    <p>From classic sophistication to industrial edge, we
+                        uncover various design styles.
+                    </p>
+                </div>
+                <div class="item">
+                    <img src="./blog/Blog-image8.svg" alt="">
+                    <a href="#">12 Jan, 2024</a>
+                    <h2>Unveiling Interior Design Secrets</h2>
+                    <p>From sleek contemporary to vintage allure, we
+                        delve into diverse design styles.
+                    </p>
+                </div>
+                <div class="item">
+                    <img src="./blog/Blog-image9.svg" alt="">
+                    <a href="#">12 Jan, 2024</a>
+                    <h2>The Aesthetics Agenda:
+                        Redefining Interior Elegance
+                    </h2>
+                    <p>From natural zen to maximalist boldness, we
+                        investigate a plethora of design styles.
+                    </p>
                 </div>
             </section>
             <section class="fade-in" id="unlock">
@@ -114,18 +157,18 @@
         </main>
         <footer class="fade-in">
             <div class="first-foot">
-                <div class="grid onee">
+                <div class="grid one">
                     <h2>Ready To Build Your Dream Project</h2>
                     <div class="get-btn">Get in touch<i class='bx bx-arrow-back'></i></div>
                 </div>
-                <div class="grid twoo">
+                <div class="grid two">
                     <p>Company</p>
                     <a href="project.html">Projects</a>
                     <a href="about.html">About</a>
                     <a href="contact.html">Contact</a>
                     <a href="#">Career</a>
                 </div>
-                <div class="grid twoo">
+                <div class="grid two">
                     <p>Pages</p>
                     <a href="#">FAQ</a>
                     <a href="#">Terms & Condition</a>
@@ -134,7 +177,7 @@
                 </div>
             </div>
             <div class="second-foot">
-                <div class="grid fourr">
+                <div class="grid four">
                     <div class="logo">
                         <img src="./home/Clip path group.svg" alt="">
                         <p>Nextspace</p>
@@ -143,19 +186,19 @@
                         them into detailed plans.
                     </P>
                 </div>
-                <div class="grid fivee">
+                <div class="grid five">
                     <p>70 University Ave Palo Alto, CA 94301</p>
                     <a href="#">650.671.1706</a>
                     <a href="#">nextgentechie@gmail.com</a>
                 </div>
-                <div class="grid sixx">
+                <div class="grid six">
                     <a href="#">Discord</a>
                     <a href="#">Twitter</a>
                     <a href="#">Linkedin</a>
                 </div>
             </div>
         </footer>
-        <script src="./review.js"></script>
+        <script src="./blog.js"></script>
     </div>
 </body>
 </html>
