--- a/project.html
+++ b/project.html
@@ -20,6 +20,12 @@
                                 <a href="about.html">About</a>
                                 <a href="service.html">Service</a>
                                 <a href="review.html">Review</a>
+                                <a href="blog.html">Blog</a>
+                                <a href="gallery.html">Gallery</a>
+                                <a href="career.html">Career</a>
+                                <a href="term.html">Terms</a>
+                                <a href="privacy.html">Privacy</a>
+                                <a href="faq.html">FAQs</a>
                             </div>
                         </div>
                     </li>
@@ -189,3 +195,4 @@
         <script src="./project.js"></script>
     </div>
 </body>
+</html>
