--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
                     <div class="line2"></div>
                     <div class="line3"></div>
                 </div>
-                <button class="get-btn">Get in Touch</button>
+                <button class="get-btn" onclick="window.location.href='contact.html'">Get in Touch</button>
             </nav>
             <div class="hero-head">
                 <h1>Blog</h1>
@@ -148,8 +148,8 @@
                             share their ideas, preferences, and feedback.
                         </p>
                         <div class="head-btn">
-                            <button>Get in touch <i class='bx bx-arrow-back'></i></button>
-                            <button>+234 9022 532 359</button>
+                            <button onclick="window.location.href='contact.html'">Get in touch <i class='bx bx-arrow-back'></i></button>
+                            <button onclick="window.location.href='tel:+234 9022 532 359'">+234 9022 532 359</button>
                         </div>
                     </div>
                 </div>
@@ -159,21 +159,21 @@
             <div class="first-foot">
                 <div class="grid one">
                     <h2>Ready To Build Your Dream Project</h2>
-                    <div class="get-btn">Get in touch<i class='bx bx-arrow-back'></i></div>
+                    <button class="get-btn" onclick="window.location.href='contact.html'">Get in touch<i class='bx bx-arrow-back'></i></button>
                 </div>
                 <div class="grid two">
                     <p>Company</p>
                     <a href="project.html">Projects</a>
                     <a href="about.html">About</a>
                     <a href="contact.html">Contact</a>
-                    <a href="#">Career</a>
+                    <a href="career.html">Career</a>
                 </div>
                 <div class="grid two">
                     <p>Pages</p>
-                    <a href="#">FAQ</a>
-                    <a href="#">Terms & Condition</a>
-                    <a href="#">Policies</a>
-                    <a href="#">License</a>
+                    <a href="faq.html">FAQ</a>
+                    <a href="term.html">Terms & Condition</a>
+                    <a href="privacy.html">Policies</a>
+                    <a href="blog.html">Blog</a>
                 </div>
             </div>
             <div class="second-foot">
@@ -189,10 +189,10 @@
                 <div class="grid five">
                     <p>70 University Ave Palo Alto, CA 94301</p>
                     <a href="#">650.671.1706</a>
-                    <a href="#">nextgentechie@gmail.com</a>
+                    <a href="mailto:nextgentechie@gmail.com">nextgentechie@gmail.com</a>
                 </div>
                 <div class="grid six">
-                    <a href="#">Discord</a>
+                    <a href="#">Instagram</a>
                     <a href="#">Twitter</a>
                     <a href="#">Linkedin</a>
                 </div>
