--- a/career.html
+++ b/career.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Booking</title>
-    <link rel="stylesheet" href="privacy.css">
+    <link rel="stylesheet" href="career.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -44,81 +44,69 @@
                 <button class="get-btn" onclick="window.location.href='contact.html'">Get in Touch</button>
             </nav>
             <div class="hero-head">
-                <h1>Privacy Policy</h1>
+                <h1>Career</h1>
             </div>
         </header>
         <main>
-            <section class="fade-in" id="flex-body">
-                <div>
-                    <h2>Information Collection</h2>
-                    <p>Details about the types of personal information collected, such as names, addresses, contact information,
-                         and possibly sensitive information related to interior services or projects.
-                    </p>
+            <div class="fade-in" id="career-flex">
+                <div class="work">
+                    <img src="./career/Career-image.svg" alt="">
+                    <div class="work-info">
+                        <h2>Interested in working with us!</h2>
+                        <p>We encourage our team to fearlessly challenge conventions
+                            and pioneer new paths.
+                        </p>
+                    </div>
+                    <div class="hotline">
+                        <div class="join">
+                            <h3>Join Us</h3>
+                            <a href="mailto:nextgentechie@gmail.com">nextgentechie@gmail.com</a>
+                        </div>
+                        <div class="join">
+                            <h3>Call to</h3>
+                            <a href="tel:+21 8920 9100, +20 2939 3023">+21 8920 9100, +20 2939 3023</a>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <h2>Purpose of Collection</h2>
-                    <p>Explanation of how personal information is used to maintain the security of interior agency systems
-                        , prevent unauthorized access or fraud, and protect against other unlawful activities. Assurance that
-                         personal information will only be collected and used for purposes consistent with individuals' consent or
-                          preferences, where applicable, and in accordance with applicable privacy laws and regulations.
-                    </p>
+                <div class="open">
+                    <div class="open-text">
+                        <h2>Open Opportunities</h2>
+                        <p>Details about the types of personal information collected, such as names,
+                            addresses, contact information, and possibly.
+                        </p>
+                    </div>
+                    <div class="open-hyper">
+                        <div class="space-flex">
+                            <div class="space-text">
+                                <h3>Junior Decor Designer</h3>
+                                <p>Full TIme/Remote</p>
+                            </div>
+                            <a href="contact.html"><i class='bx bx-arrow-back'></i></a>
+                        </div>
+                        <div class="space-flex">
+                            <div class="space-text">
+                                <h3>Assistant Decor Designer</h3>
+                                <p>Full TIme/Remote</p>
+                            </div>
+                            <a href="contact.html"><i class='bx bx-arrow-back'></i></a>
+                        </div>
+                        <div class="space-flex">
+                            <div class="space-text">
+                                <h3>Junior Interior Stylist</h3>
+                                <p>Full-Time/Telecommute</p>
+                            </div>
+                            <a href="contact.html"><i class='bx bx-arrow-back'></i></a>
+                        </div>
+                        <div class="space-flex">
+                            <div class="space-text">
+                                <h3>Junior Design Specialist</h3>
+                                <p>Long-Term/Virtual</p>
+                            </div>
+                            <a href="contact.html"><i class='bx bx-arrow-back'></i></a>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <h2>Use of Information</h2>
-                    <p>Details about the types of personal information collected, such as names, addresses, contact information,
-                         and possibly sensitive information related to interior services or projects.
-                    </p>
-                </div>
-                <div>
-                    <h2>Disclosure to Third Parties</h2>
-                    <p>Identification of the types of external entities with whom the agency may share personal information. This
-                         could include contractors, consultants, vendors, partner organizations, or other government agencies.
-                          Explanation of why the agency shares personal information with third parties. This might include facilitating
-                           services, conducting research or analysis, collaborating on projects, or complying with legal requirements.
-                    </p>
-                    <p>Clarity on the specific categories of personal information shared with third parties and limitations on the
-                        purposes for which it may be used by those parties.
-                    </p>
-                </div>
-                <div>
-                    <h2>Data Retention</h2>
-                    <p>Measures taken to protect personal information from unauthorized access, disclosure, alteration, or
-                         destruction, which might include encryption, access controls, and regular security assessments.
-                    </p>
-                    <p>Information about the methods used to securely dispose of or anonymize personal information once 
-                        it is no longer needed for its original purpose. This might include shredding physical documents, 
-                        deleting electronic records, or anonymizing data to remove identifying information.
-                    </p>
-                </div>
-                <div>
-                    <h2>Rights of Individuals</h2>
-                    <p>Details about the types of personal information collected, such as names, addresses, contact information,
-                         and possibly sensitive information related to interior services or projects.
-                    </p>
-                </div>
-                <div>
-                    <h2>Legal Basis for Processing</h2>
-                    <p>Details about the types of personal information collected, such as names, addresses, contact information,
-                         and possibly sensitive information related to interior services or projects.
-                    </p>
-                </div>
-                <div>
-                    <h2>International Data Transfers</h2>
-                    <p>Details about the types of personal information collected, such as names, addresses, contact information,
-                         and possibly sensitive information related to interior services or projects.
-                    </p>
-                    <p>Disclosure of how personal information may be used for marketing or outreach purposes, such as promoting
-                         interior-related events, initiatives, or public awareness campaigns. This section may include information 
-                         about individuals' rights to opt-out of receiving marketing communications.
-                    </p>
-                </div>
-                <div>
-                    <h2>Updates to the Privacy Policy</h2>
-                    <p>Details about the types of personal information collected, such as names, addresses, contact information, and 
-                        possibly sensitive information related to interior services or projects.
-                    </p>
-                </div>
-            </section>
+            </div>
             <section class="fade-in" id="unlock">
                 <div class="unlock-flex">
                     <div class="head-text">
@@ -181,7 +169,7 @@
                 </div>
             </div>
         </footer>
-        <script src="./privacy.js"></script>
+        <script src="career.js"></script>
     </div>
 </body>
 </html>
