--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                         <div class="line2"></div>
                         <div class="line3"></div>
                     </div>
-                    <button class="get-btn">Get in Touch</button>
+                    <button class="get-btn" onclick="window.location.href='contact.html'">Get in Touch</button>
                 </nav>
             </header>
             <main class="fade-in">
@@ -52,7 +52,7 @@
                         process. We encourage clients to actively participate in discussions,
                         share their ideas, preferences, and feedback.
                     </p>
-                    <form action="">
+                    <form action="" id="contactForm">
                         <div class="contact">
                             <label for="#user">Full name</label>
                             <input type="text" id="user" placeholder="Roland Jonathan">
@@ -69,7 +69,7 @@
                             <label for="#message">Message</label>
                             <textarea id="message" placeholder="Write your message...."></textarea>
                         </div>
-                        <button>Send a message <i class='bx bx-arrow-back' ></i></button>
+                        <button type="submit">Send a message <i class='bx bx-arrow-back' ></i></button>
                     </form>
                 </div>
                 <div class="contact-info">
@@ -82,11 +82,11 @@
                     <div class="second">
                         <div class="right">
                             <h3>Working Mail</h3>
-                            <a href="#">nextgentechie@gmail.com</a>
+                            <a href="mailto:nextgentechie@gmail.com">nextgentechie@gmail.com</a>
                         </div>
                         <div class="right">
                             <h3>Office Phone</h3>
-                            <a href="#">+234 815 780 8694</a>
+                            <a href="tel:+234 815 780 8694">+234 815 780 8694</a>
                         </div>
                     </div>
                     <div class="third">
@@ -110,8 +110,8 @@
                         share their ideas, preferences, and feedback.
                     </p>
                     <div class="head-btn">
-                        <button>Get in touch <i class='bx bx-arrow-back'></i></button>
-                        <button>+234 9022 532 359</button>
+                        <button onclick="window.location.href='contact.html'">Get in touch <i class='bx bx-arrow-back'></i></button>
+                        <button onclick="window.location.href='tel:+234 9022 532 359'">+234 9022 532 359</button>
                     </div>
                 </div>
             </div>
@@ -120,21 +120,21 @@
             <div class="first-foot">
                 <div class="grid onee">
                     <h2>Ready To Build Your Dream Project</h2>
-                    <div class="get-btn">Get in touch<i class='bx bx-arrow-back'></i></div>
+                    <button class="get-btn" onclick="window.location.href='contact.html'">Get in touch<i class='bx bx-arrow-back'></i></button>
                 </div>
                 <div class="grid twoo">
                     <p>Company</p>
                     <a href="project.html">Projects</a>
                     <a href="about.html">About</a>
                     <a href="contact.html">Contact</a>
-                    <a href="#">Career</a>
+                    <a href="career.html">Career</a>
                 </div>
                 <div class="grid twoo">
                     <p>Pages</p>
-                    <a href="#">FAQ</a>
-                    <a href="#">Terms & Condition</a>
-                    <a href="#">Policies</a>
-                    <a href="#">License</a>
+                    <a href="faq.html">FAQ</a>
+                    <a href="term.html">Terms & Condition</a>
+                    <a href="privacy.html">Policies</a>
+                    <a href="blog.html">Blog</a>
                 </div>
             </div>
             <div class="second-foot">
@@ -150,7 +150,7 @@
                 <div class="grid fivee">
                     <p>70 University Ave Palo Alto, CA 94301</p>
                     <a href="#">650.671.1706</a>
-                    <a href="#">nextgentechie@gmail.com</a>
+                    <a href="mailto:nextgentechie@gmail.com">nextgentechie@gmail.com</a>
                 </div>
                 <div class="grid sixx">
                     <a href="#">Discord</a>
