--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                     <div class="line2"></div>
                     <div class="line3"></div>
                 </div>
-                <button class="get-btn">Get in Touch</button>
+                <button class="get-btn" onclick="window.location.href='contact.html'">Get in Touch</button>
             </nav>
             <div class="hero-head">
                 <h1>Our Story</h1>
@@ -194,8 +194,8 @@
                             share their ideas, preferences, and feedback.
                         </p>
                         <div class="head-btn">
-                            <button>Get in touch <i class='bx bx-arrow-back'></i></button>
-                            <button>+234 9022 532 359</button>
+                            <button onclick="window.location.href='contact.html'">Get in touch <i class='bx bx-arrow-back'></i></button>
+                            <button onclick="window.location.href='tel:+234 9022 532 359'">+234 9022 532 359</button>
                         </div>
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                 <div class="quest-flex">
                     <h3>FAQS</h3>
                     <h2>Still Have A Question</h2>
-                    <button>See all FAQs<i class='bx bx-arrow-back'></i></button>
+                    <button onclick="window.location.href='faq.html'">See all FAQs<i class='bx bx-arrow-back'></i></button>
                 </div>
                 <div class="faq">
                     <div class="faq-item">
@@ -269,21 +269,21 @@
             <div class="first-foot">
                 <div class="grid onee">
                     <h2>Ready To Build Your Dream Project</h2>
-                    <div class="get-btn">Get in touch<i class='bx bx-arrow-back'></i></div>
+                    <button class="get-btn" onclick="window.location.href='contact.html'">Get in touch<i class='bx bx-arrow-back'></i></button>
                 </div>
                 <div class="grid twoo">
                     <p>Company</p>
                     <a href="project.html">Projects</a>
                     <a href="about.html">About</a>
                     <a href="contact.html">Contact</a>
-                    <a href="#">Career</a>
+                    <a href="career.html">Career</a>
                 </div>
                 <div class="grid twoo">
                     <p>Pages</p>
-                    <a href="#">FAQ</a>
-                    <a href="#">Terms & Condition</a>
-                    <a href="#">Policies</a>
-                    <a href="#">License</a>
+                    <a href="faq.html">FAQ</a>
+                    <a href="term.html">Terms & Condition</a>
+                    <a href="privacy.html">Policies</a>
+                    <a href="blog.html">Blog</a>
                 </div>
             </div>
             <div class="second-foot">
@@ -299,7 +299,7 @@
                 <div class="grid fivee">
                     <p>70 University Ave Palo Alto, CA 94301</p>
                     <a href="#">650.671.1706</a>
-                    <a href="#">nextgentechie@gmail.com</a>
+                    <a href="mailto:nextgentechie@gmail.com">nextgentechie@gmail.com</a>
                 </div>
                 <div class="grid sixx">
                     <a href="#">Discord</a>
